<resources>
    <string name="app_name">GamerFinder</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username_input">Username/Email</string>
    <string name="password_input">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_secondname">Second name</string>
    <string name="prompt_change_password">Change Password</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="lobby_curent_max">%1$s/%2$s</string>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete_account">Delete Account</string>

    <string name="invalid_max_user">Invalid lobby size. Size has to be at least 2.</string>
    <string name="invalid_title_empty">Invalid Title. Title cannot be empty.</string>
    <string name="login_error">Invalid username or password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="firstName_error">Not a valid First Name</string>
    <string name="secondName_error">Not a valid Second Name</string>
    <string name="email_error">Not a valid email</string>
    <string name="birthDate_error">Must be over 13 years old</string>
    <string name="gender_error">Pick a gender</string>

    <string name="register_decision_text">Do you want to fill in the rest of the data now?</string>
    <string name="register_decision_button_yes">Yes</string>
    <string name="register_decision_button_later">Later</string>

    <string name="custom_dialog_title">Alert</string>
    <string name="custom_dialog_info">Sorry, something went wrong.\nRegistration failed.</string>
    <string name="custom_dialog_button">Try again</string>

    <string name="title_activity_profile_view">profileView</string>
    <string name="update_your_password">Update Your Password</string>
    <string name="my_account">My Account</string>
    <string name="change_account_information">Change Account Information</string>

    <string name="preferences_file">my_preferences</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_date_of_birth">Date of Birth</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_other">Other</string>
    <string name="log_out">log out</string>
    <string name="delete_dialog_title">Delete the account?</string>
    <string name="delete_dialog_message">You are about to delete your account. This action is not reversible. Are you sure you want to proceed?</string>
    <string name="delete">Delete</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="create_lobby_title">Create new lobby</string>
    <string name="prompt_lobby_size">Lobby size</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="type_delete">Type your username</string>
    <string name="my_lobbies">My Lobbies</string>
    <string name="menu_games">Games</string>
    <string name="menu_mylobbies">MyLobbies</string>
    <string name="menu_profile">Profile</string>
    <string name="leave_lobby">Leave Lobby</string>
    <string name="in_lobby">In Lobby:</string>
    <string name="pick_a_game">What are we playing today?</string>
</resources>